--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Cyrene Meme</title>
+  <title>28年后 你还会记得我吗</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="resources/css/index.css">
   <link rel="icon" href="resources/images/logo.png" type="image/png">
 </head>
 
-<!-- 嗨，是你在偷看我嗎~ ♪-->
-<!-- 無名者的批註：嗨嘍，嗨嘍，你們有誰看到一個粉粉的，小小的兔子，像桃子一樣，是長不高的，說話的時候帶著小尾巴，她的名字叫昔漣，我找不到她了■■■......-->
 
-<!-- Hi, is that you peeking at me~ ♪ -->
-<!-- Annotation by the Nameless One: Hello, hello, has anyone seen a little pink bunny, small and peach-like, who can’t grow tall, and speaks with a little tail at the end of her words? Her name is Cyrene, and I can’t find her... -->
 
 <body>
   <div class="code-overlay" aria-hidden="true">
@@ -97,8 +93,8 @@
           </div>
 
           <a class="meta-badge email"
-             href="mailto:cyrene@cyrene.meme"
-             aria-label="Email: cyrene@cyrene.meme">
+             href="mailto:762930756@qq.com"
+             aria-label="Email: 762930756@qq.com">
             <svg width="16" height="16" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M2 5h20v14H2V5zm2 2v10h16V7l-8 5L4 7z" fill="currentColor"/>
             </svg>
@@ -136,3 +132,4 @@
   <script src="resources/js/code-overlay.js" defer></script>
 </body>
 </html>
+
