--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="meta-row" role="contentinfo" aria-label="Site meta">
           <div class="icp-box">
             <a class="meta-badge icp"
-               href="https://icp.gov.moe/?keyword=20259093"
+               href="https://icp.gov.moe/?keyword=20257728"
                target="_blank"
                rel="noopener noreferrer">
               萌ICP备20257728号
@@ -98,7 +98,7 @@
             <svg width="16" height="16" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M2 5h20v14H2V5zm2 2v10h16V7l-8 5L4 7z" fill="currentColor"/>
             </svg>
-            <span>cyrene@cyrene.meme</span>
+            <span>762930756@qq.com</span>
           </a>
 
           <div class="counter-box">
@@ -132,5 +132,6 @@
   <script src="resources/js/code-overlay.js" defer></script>
 </body>
 </html>
+
 
 
