--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@
     </audio>
 
     <footer class="footer">
-        © This website is solely dedicated to documenting the 28-year promise between Shizuku Lulu and the Lulumins.
-    The copyright for all materials on this website belongs to Shizuku Lulu.
+        © This website is solely dedicated to documenting the 28-year promise between Shizuku Lulu and the Luu-mins.
+All content and materials on this website are copyrighted by Shizuku Lulu.
     </footer>
 
     <script src="resources/js/jquery-3.2.1.min.js"></script>
     <script src="resources/js/index.js"></script>
 </body>
 </html>
+
 
